Bug 305163 - New Kexi project file is created in current directory instead of the selected one
Summary: New Kexi project file is created in current directory instead of the selected...
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: KexiDB (other bugs)
Version First Reported In: 2.5.0
Platform: unspecified Linux
: NOR normal
Target Milestone: 2.5
Assignee: Jarosław Staniek
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2012-08-14 20:28 UTC by Jarosław Staniek
Modified: 2014-02-12 10:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5.1
Sentry Crash Report:
staniek: Usability+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2012-08-14 20:28:41 UTC
New Kexi project file (SQLite-based) is created in current directory instead of the selected one. Moreover recent files list will not contain the proper path to the created file.

Reproducible: Always

Steps to Reproduce:
1. Go to New -> Blank Database -> File
2. In Project filename field change the directory to something else
3. Click Next
Actual Results:  
Created database is not located in the selected directory but in the current application's directory (pwd). Welcome screen incorrectly points to the expected path.

Expected Results:  
Created database should be located in the selected directory. Welcome screen correctly points to the expected path.

This defect is important because some users may have problems with locating databases they created, especially because the recent files list of the Welcome screen does not point to correct path.
Comment 1 Jarosław Staniek 2012-08-14 21:14:19 UTC
Git commit df1c5747b2058738c9d393f71352b8d79e8991e0 by Jaroslaw Staniek.
Committed on 14/08/2012 at 23:09.
Pushed by staniek into branch 'master'.

Predicate
*Fixed bug: New db file is created in current dir instead of the selected one

M  +8    -0    Predicate/Connection.cpp

http://commits.kde.org/predicate/df1c5747b2058738c9d393f71352b8d79e8991e0
Comment 2 Jarosław Staniek 2012-08-14 21:26:57 UTC
Git commit 8669a341081ea5a28c7815034b9396b36582b459 by Jaroslaw Staniek.
Committed on 14/08/2012 at 22:30.
Pushed by staniek into branch 'calligra/2.5'.

KexiDB: Fixed bug: New Kexi project file created in current directory

(instead of the selected one)
FIXED-IN:2.5.1
REVIEW:106023

M  +7    -1    kexi/kexidb/connection.cpp

http://commits.kde.org/calligra/8669a341081ea5a28c7815034b9396b36582b459
Comment 3 Jarosław Staniek 2012-08-18 20:47:01 UTC
Git commit 572bae0147689a950796b03a7b900b363da77ad8 by Jaroslaw Staniek.
Committed on 14/08/2012 at 22:30.
Pushed by staniek into branch 'master'.

KexiDB: Fixed bug: New Kexi project file created in current directory

(instead of the selected one)
FIXED-IN:2.5.1
REVIEW:106023

M  +7    -1    libs/db/connection.cpp

http://commits.kde.org/calligra/572bae0147689a950796b03a7b900b363da77ad8
Comment 4 Jarosław Staniek 2012-09-01 09:21:22 UTC
Git commit 627996a9a7d3201aeee343c2860a5dde75a83031 by Jaroslaw Staniek.
Committed on 14/08/2012 at 22:30.
Pushed by staniek into branch 'kexi-features-staniek'.

KexiDB: Fixed bug: New Kexi project file created in current directory

(instead of the selected one)
FIXED-IN:2.5.1
REVIEW:106023

M  +7    -1    libs/db/connection.cpp

http://commits.kde.org/calligra/627996a9a7d3201aeee343c2860a5dde75a83031