KexiDB: Fixed bug: New Kexi project file created in current directory

(instead of the selected one)

BUG:305163
FIXED-IN:2.5.1
REVIEW:106023